css/style.css
/* ... */
.main_menu_list .dropdown > a {
  position: relative;
}
.main_menu_list .dropdown > a:after {
  float: right;
  font-size: 14px;
  content: "\f107";
  font-weight: 900;
  margin: 3px 0 0 4px;
  -webkit-transition: var(--bs-transition);
  transition: var(--bs-transition);
  font-family: "Font Awesome 6 Pro";
}
.main_menu_list .dropdown-menu {
  display: none;
  margin: 2px 0 0;
  min-width: 210px;
  inset: 100% auto auto auto;
}
.main_menu_list .dropdown-menu:before {
  top: -4px;
  height: 2px;
}
.main_menu_list .dropdown-menu > li:hover > a, .main_menu_list .dropdown-menu > li.active > a {
  color: var(--bs-primary);
  background-color: var(--bs-primary-bg-subtle);
}
.main_menu_list .dropdown-menu .dropdown > a:after {
  margin-top: 1px;
  content: "\f105";
}
.main_menu_list .dropdown-menu .dropdown-menu {
  top: 0;
  margin: 0;
  left: 100%;
}
.main_menu_list .dropdown-menu.show {
  display: block;
}

@media screen and (min-width: 992px) {
  .main_menu_list .dropdown-menu {
    opacity: 0;
    display: block;
    display: block;
    -webkit-transition: 200ms;
    transition: 200ms;
    visibility: hidden;
    -webkit-transform-origin: top;
            transform-origin: top;
    -webkit-transform: perspective(300px) rotateX(-8deg);
            transform: perspective(300px) rotateX(-8deg);
  }
  .main_menu_list .dropdown-menu.show {
    opacity: 1;
    visibility: visible;
    -webkit-transform: perspective(300px) rotateX(0deg);
            transform: perspective(300px) rotateX(0deg);
  }
}
.header_btns_group > li:not(:first-child) {
  margin: 0 0 0 10px;
}
.header_btns_group > li:first-child {
  display: none;
}

/* 3.01 - Site Header - End
================================================== */
/* 3.02 - Site Footer - Start
================================================== */
.site_footer .info_list {
  margin: -6px -15px;
}
.site_footer .info_list > li {
  padding: 6px 15px;
}
.site_footer .info_list .info_icon {
  width: auto;
  font-size: 5px;
  margin: 2px 8px 0 0;
}
.site_footer .info_list .info_icon i {
  opacity: 0.4;
  color: var(--bs-white);
  -webkit-transition: var(--bs-transition);
  transition: var(--bs-transition);
}
.site_footer .info_list a {
  color: var(--bs-white);
}
.site_footer .info_list a:hover {
  color: var(--bs-secondary);
}
.site_footer .info_list a:hover .info_icon i {
  opacity: 1;
}

.site_footer_content {
  padding: 78px 0;
}

.copyright_widget {
  padding: 32px 0;
  border-top: var(--bs-border-width) var(--bs-border-style) rgba(255, 255, 255, 0.4);
}
.copyright_widget .copyright_text {
  color: var(--bs-white);
}

/* 3.02 - Site Footer - End
================================================== */
/* 3.03 - Page Header, Page Banner, Breadcrumb - Start
================================================== */
.page_banner {
  overflow: hidden;
  padding: 55px 0 62px;
  background-color: var(--bs-primary-bg-subtle);
}
.page_banner .decoration_item {
  top: 50%;
  -webkit-transform: translateY(-50%);
          transform: translateY(-50%);
}
.page_banner .decoration_item.shape_leaf_1 {
  left: 0;
}
.page_banner .decoration_item.shape_leaf_2 {
  right: 0;
}

.site_header + main > .page_banner {
  margin-top: 118px;
}

.breadcrumb_nav > li {
  font-weight: 600;
  color: var(--bs-dark);
  font-family: var(--bs-font-heading);
  font-size: var(--bs-body-font-size);
  line-height: var(--bs-body-line-height);
}
.breadcrumb_nav > li:not(:last-child) {
  position: relative;
  padding-right: 36px;
}
.breadcrumb_nav > li:not(:last-child):after {
  top: 2px;
  right: 13px;
  font-size: 14px;
  content: "\f105";
  position: absolute;
  font-family: "Font Awesome 5 Pro";
}
.breadcrumb_nav a {
  display: block;
  color: var(--bs-primary);
}
.breadcrumb_nav a:hover {
  color: var(--bs-secondary);
}

.page_title {
  font-size: 54px;
  font-weight: 800;
  line-height: 60px;
  margin-bottom: 30px;
}

/* 3.03 - Page Header, Page Banner, Breadcrumb - End
================================================== */
/* 3.04 - Sidebar - Start
================================================== */
.sidebar > *:not(:last-child) {
  margin-bottom: 60px;
}

.sidebar_widget_title {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  margin-bottom: 30px;
}
.sidebar_widget_title .title_icon {
  max-width: 22px;
  margin-bottom: -2px;
}
.sidebar_widget_title .title_icon img {
  display: block;
}
.sidebar_widget_title .title_text {
  font-size: 24px;
  line-height: 30px;
  padding-left: 10px;
}

/* 3.04 - Sidebar - End
================================================== */
/* 4.01 - Page Hero Section - Start
================================================== */
.hero_section {
  margin-top: 120px;
}
.hero_section .heading_text {
  font-size: 54px;
  font-weight: 800;
  line-height: 60px;
  margin-bottom: 20px;
}
.hero_section p {
  max-width: 520px;
  margin-bottom: 42px;
  margin-top: 40px;
  font-size: var(--bs-body-font-size-md);
  line-height: var(--bs-body-line-height-md);
}
.hero_section .hero_section_counter {
  margin-top: 86px;
}
.hero_section .shape_blur_shadow {
  top: 30px;
  left: -200px;
  width: 640px;
  height: 640px;
  opacity: 0.06;
  -webkit-filter: blur(67px);
          filter: blur(67px);
  background-color: var(--bs-primary);
  border-radius: var(--bs-border-radius-pill);
}
.hero_section .shape_leaf {
  top: 160px;
  left: -50px;
}

.hero_image {
  width: 30rem;
}

.hero_image_wrap {
  z-index: 1;
  padding: 60px;
  position: relative;
}
.hero_image_wrap:after, .hero_image_wrap:before {
  width: 85%;
  height: 85%;
  z-index: -1;
  content: "";
  position: absolute;
}
.hero_image_wrap:before {
  top: 0;
  left: 0;
  background-color: var(--bs-secondary-bg-subtle);
}
.hero_image_wrap:after {
  right: 0;
  bottom: 0;
  background-color: #C1E3DE;
}
.hero_image_wrap img {
  border-radius: var(--bs-border-radius-xxl);
}
/* ... */

